# projeto_com_modelos_hugging_face

./: .gitignore  README.md  pyproject.toml
dados/: descricoes_produtos.csv
projeto-com-modelos-hugging-face/: analise_sentimentos_ptbr.ipynb  categorizando_produtos.ipynb
