[tool.poetry]
name = "projeto-com-modelos-hugging-face"
version = "0.1.0"
description = ""
authors = ["Alexandre Santos <lexander.alfa@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
transformers = "4.42.4"
pysentimiento = "0.7.3"
pandas = "2.0.3"
plotly = "5.15.0"
nltk = "3.8.1"
liqfit = "1.0.0"
gradio = "4.38.1"
Pillow = "9.4.0"
torch = "2.3.1"
polars = "^1.6.0"
nbformat = "^5.10.4"
wordcloud = "^1.9.3"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
jupyter = "^1.0.0"
ipywidgets = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"